@@ -8,6 +8,9 @@ BGI or Ultima high throughput sequencing platforms)
 
 - migrates sed calls to perl for better memory-efficiency on large input files
 
+- set default user as "root" in docker containers and ensure that cellranger is writeable
+  to allow running in nextflow or singularity
+
 ### 1.2.4
 
 - enables unit testing via nextflow for nf-core module
